modifico js y hombre

--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -57,122 +57,18 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
 
-        <h3 class="adidas">Adidas</h3>
+        <h5 id="filtro-nike">Nike</h5>
+        <h5 id="filtro-adidas">Adidas</h5>
+        <h5 id="eliminar-filtros">Eliminar filtros</h5>
+        <section id="container"></section>
+        <div id="cart"></div>
+        <section id="totalCompra"></section>
 
-        <section class="productos">
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camperon-argentina-adidas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camperon adidas Argentina Condivo 2022</h3>
-                    <h4 class="productos">$83.599</h4>
-                    <button id="cero" class="btnProd" type="button">Agregar al carrito</button>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-argentina.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta Argentina Campeones Titular</h3>
-                    <h4 class="productos">$24.440</h4>
-                    <button id="one" class="btnProd" type="button">Agregar al carrito</button>
-                </div>
-            </div>
+        <section id="productos"></section>
 
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Conjunto Adidas Essential Negro</h3>
-                    <h4 class="productos">$21.299</h4>
-                    <button id="two" class="btnProd" type="button">Agregar al carrito</button>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/botines-violeta.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Botines De Fútbol Adidas Predator Unisex Negro</h3>
-                    <h4 class="productos">$39.999</h4>
-                    <button id="three" class="btnProd" type="button">Agregar al carrito</button>
-                </div>
-            </div>
+        <section id="carrito"></section>
 
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-mangas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Adidas Tiro Pride</h3>
-                    <h4 class="productos">$27.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/short-puma-negro.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Short De Baño Puma Length Swim De Hombre</h3>
-                    <h4 class="productos">$5.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-facha.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera adidas Varilite</h3>
-                    <h4 class="productos">$60.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-camuflada-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera adidas Marathon</h3>
-                    <h4 class="productos">$39.999</h4>
-                </div>
-            </div>
-            
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-nike-pipa-roja.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Nike Sportswear</h3>
-                    <h4 class="productos">$7.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-nike-blanca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Running Nike Dri-Fit Miler Hombre</h3>
-                    <h4 class="productos">$14.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-canterbury.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Canterbury Ccc Logo</h3>
-                    <h4 class="productos">$6.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-under-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Under Armour Challenger Top</h3>
-                    <h4 class="productos">$12.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-urbana.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Urbanas adidas Breaknet</h3>
-                    <h4 class="productos">$25.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-nike-blancas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Running Nike Air Zoom Vomero 16</h3>
-                    <h4 class="productos">$35.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-under-fluo.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Under Armour Hovr Sonic 5</h3>
-                    <h4 class="productos">$49.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-rojas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas adidas Response Super 3.0</h3>
-                    <h4 class="productos">$41.999</h4>
-                </div>
-            </div>
-        </section>
-
-        <section id="productos">
-            
-        </section>
+        <div id="total"></div>
     </main>
 
     <footer class="footer">
@@ -229,6 +125,6 @@
 
 
     <script src="../main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
