--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="shortcut icon" href="../img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/main.css">
     <title>Hombre | FinishLine</title>
@@ -34,10 +35,6 @@
                     <img class="inicio-sesion" src="../img/usuario.png" alt="Inicio de sesion">
                     <p class="inicio-sesion">INGRESA O REGISTRATE</p>
                 </div>
-                <div class="mi-compra">
-                    <img class="carrito" src="../img/carrito.png" alt="Carrito">
-                    <p class="carrito">Mi Carrito</p>
-                </div>
             </div>
             <nav class="nav">
                 <ul class="nav">
@@ -48,6 +45,22 @@
                 </ul>
             </nav>
         </div>
+        <nav class="navbar  fixed-top navCarrito">
+            <div class="container-fluid divCarrito">
+              <a class="navbar-brand" href="#"></a>
+              <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <img class="carrito" src="../img/carrito.png" alt="Carrito">
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Mi Carrito</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body carritoAgregado">
+                </div>
+                <div id="totalCompra"></div>
+                <button id="finalizarCompra">Finalizar Compra</button>
+          </nav>
     </header>
 
     <main>
@@ -57,18 +70,22 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
 
-        <h5 id="filtro-nike">Nike</h5>
-        <h5 id="filtro-adidas">Adidas</h5>
-        <h5 id="eliminar-filtros">Eliminar filtros</h5>
-        <section id="container"></section>
+        <section id="sectionGlobal">
+            <section id="filtros">
+                <h5 id="filtro-adidas">Adidas</h5>
+                <h5 id="filtro-canterbury">Canterbury</h5>
+                <h5 id="filtro-nike">Nike</h5>
+                <h5 id="filtro-puma">Puma</h5>
+                <h5 id="filtro-underArmour">Under Armour</h5>
+                <h5 id="eliminar-filtros">Eliminar filtros</h5>
+            </section>
+            <section id="container"></section>
+        </section>
         <div id="cart"></div>
-        <section id="totalCompra"></section>
 
         <section id="productos"></section>
 
         <section id="carrito"></section>
-
-        <div id="total"></div>
     </main>
 
     <footer class="footer">
@@ -126,5 +143,7 @@
 
     <script src="../main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
