corrijo responsive en index, button carrito y toast en hombre

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -44,10 +44,10 @@
                 </ul>
             </nav>
         </div>
-        <nav class="navbar bg-body-tertiary fixed-top">
-            <div class="container-fluid">
+        <nav class="navbar bg-body-tertiary fixed-top navCarrito">
+            <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+              <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <img class="carrito" src="../img/carrito.png" alt="Carrito">
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
