--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="shortcut icon" href="./img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="./scss/main.css">
     <title>FinishLine</title>
@@ -44,11 +45,11 @@
                 </ul>
             </nav>
         </div>
-        <nav class="navbar bg-body-tertiary fixed-top navCarrito">
+        <nav class="navbar  fixed-top navCarrito">
             <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <img class="carrito" src="./img/carrito.png" alt="Carrito">
+                <img class="carrito" src="../img/carrito.png" alt="Carrito">
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -58,6 +59,7 @@
                 <div class="offcanvas-body carritoAgregado">
                 </div>
                 <div id="totalCompra"></div>
+                <a class="a-FinalizarCompra" href="./pages/finalizarcompra.html"><button id="finalizarCompra">Finalizar Compra</button></a>
           </nav>
     </header>
 
@@ -85,6 +87,15 @@
         </div>
         
         <h3 class="lo-mas-vendido">LO MÁS VENDIDO</h3>
+
+        <section id="sectionGlobal">
+            <section id="container"></section>
+        </section>
+        <div id="cart"></div>
+
+        <section id="productos"></section>
+
+        <section id="carrito"></section>
 
         <section class="productos">
             <div class="productos-1">
@@ -246,7 +257,7 @@
             <div class="compra2">
                 <img class="compra2" src="./img/camion-seguro.png" alt="Camion compra segura">
                 <h4 class="compra2">Envío rápido y seguro</h4>
-                <h5 class="compra2">Nuestro servicio de entrega es tan rápido como nunca habías imaginado. Recibe tus productos a domicilio dentro de las 48hs de realizada la compra!</h5>
+                <h5 class="compra2">Nuestro servicio de entrega es tan rápido como nunca habías imaginado. Recibe tus productos a domicilio dentro de las 72hs de realizada la compra!</h5>
             </div>
             <div class="compra3">
                 <img class="compra3" src="./img/compra-segura.png" alt="Compra segura">
@@ -287,7 +298,9 @@
     </footer>
 
 
-    <script src="./main.js"></script>
+    <script src="./js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
