--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -59,7 +59,7 @@
                 <div class="offcanvas-body carritoAgregado">
                 </div>
                 <div id="totalCompra"></div>
-                <button id="finalizarCompra">Finalizar Compra</button>
+                <a class="a-FinalizarCompra" href="./finalizarcompra.html"><button id="finalizarCompra">Finalizar Compra</button></a>
           </nav>
     </header>
 
@@ -141,7 +141,7 @@
 
 
 
-    <script src="../main.js"></script>
+    <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
