--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="shortcut icon" href="../img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/main.css">
     <title>Mujer | FinishLine</title>
@@ -44,7 +45,7 @@
                 </ul>
             </nav>
         </div>
-        <nav class="navbar bg-body-tertiary fixed-top navCarrito">
+        <nav class="navbar  fixed-top navCarrito">
             <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -58,6 +59,7 @@
                 <div class="offcanvas-body carritoAgregado">
                 </div>
                 <div id="totalCompra"></div>
+                <a class="a-FinalizarCompra" href="./finalizarcompra.html"><button id="finalizarCompra">Finalizar Compra</button></a>
           </nav>
     </header>
 
@@ -70,111 +72,22 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
 
-        <section class="productos">
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-leopardo.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas adidas Run 70s De Mujer</h3>
-                    <h4 class="productos">$30.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/conjunto-adidas-mujer.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Conjunto adidas Sportswear Teamsport De Mujer</h3>
-                    <h4 class="productos">$25.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-blancas.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas adidas Runfalcon de Mujer</h3>
-                    <h4 class="productos">$19.199</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-adidas-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera adidas Essentials Full-Zip</h3>
-                    <h4 class="productos">$25.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-nike-violeta.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Nike Swoosh Run</h3>
-                    <h4 class="productos">$33.099</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-nike-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Nike Sportswear Essential</h3>
-                    <h4 class="productos">$47.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-topper-marron.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Topper Br Puffer II</h3>
-                    <h4 class="productos">$36.219</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-adidas-gris.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón adidas Essentials</h3>
-                    <h4 class="productos">$14.899</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-puma-violeta.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Puma Favorite Full Zip</h3>
-                    <h4 class="productos">$16.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/calza-adidas-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón Nike Sportswear Essential</h3>
-                    <h4 class="productos">$21.199</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-adidas-azul.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera adidas Floral Superher</h3>
-                    <h4 class="productos">$9.799</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/remera-lotto-pride.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Lotto Pride</h3>
-                    <h4 class="productos">$4.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/pollera-fila-blanca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pollera Tenis Fila Basic Mujer</h3>
-                    <h4 class="productos">$11.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pollera-adidas-negra.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pollera adidas Club Tennis</h3>
-                    <h4 class="productos">$17.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-nike-pipa-rosa.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Nike Court Vision Low Next Nature</h3>
-                    <h4 class="productos">$33.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-adidas-floreadas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Adidas Streetcheck Cloudfoam</h3>
-                    <h4 class="productos">$32.999</h4>
-                </div>
-            </div>
+        <section id="sectionGlobal">
+            <section id="filtros">
+                <h5 id="filtro-adidas">Adidas</h5>
+                <h5 id="filtro-canterbury">Canterbury</h5>
+                <h5 id="filtro-nike">Nike</h5>
+                <h5 id="filtro-puma">Puma</h5>
+                <h5 id="filtro-underArmour">Under Armour</h5>
+                <h5 id="eliminar-filtros">Eliminar filtros</h5>
+            </section>
+            <section id="container"></section>
         </section>
+        <div id="cart"></div>
+
+        <section id="productos"></section>
+
+        <section id="carrito"></section>
     </main>
 
 
@@ -208,7 +121,7 @@
     </footer>
 
 
-    <script src="../main.js"></script>
+    <script src="../js/mujer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
