--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <img class="carrito" src="../img/carrito.png" alt="Carrito">
+                <img class="carrito" src="./img/carrito.png" alt="Carrito">
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
