Modifico index y js

--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -75,10 +75,11 @@
         <section id="sectionGlobal">
             <section id="filtros">
                 <h5 id="filtro-adidas">Adidas</h5>
-                <h5 id="filtro-canterbury">Canterbury</h5>
+                <h5 id="filtro-fila">Fila</h5>
+                <h5 id="filtro-lotto">Lotto</h5>
                 <h5 id="filtro-nike">Nike</h5>
                 <h5 id="filtro-puma">Puma</h5>
-                <h5 id="filtro-underArmour">Under Armour</h5>
+                <h5 id="filtro-topper">Topper</h5>
                 <h5 id="eliminar-filtros">Eliminar filtros</h5>
             </section>
             <section id="container"></section>
