--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </div>
         <div class="header">
             <div class="header2">
-                <a href="./index.html"><img class="logo" src="./img/logo-finishline.png" alt="FinishLine"></a>
+                <a href="./index.html"><img class="logo" src="./img/logo-finishline-transparente.png" alt="FinishLine"></a>
+                <div class="inicio-sesion">
+                    <a href="./pages/iniciosesion.html"><img class="inicio-sesion" src="./img/usuario.png" alt="Inicio de sesion"></a>
+                    <a href="./pages/iniciosesion.html"><p class="inicio-sesion">INGRESA O REGISTRATE</p></a>
+                </div>
             </div>
             <nav class="nav">
                 <ul class="nav">
@@ -276,7 +280,7 @@
         </div>
     </footer>
 
-
+    
     <script src="./js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
