--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -28,11 +28,11 @@
         </div>
         <div class="header">
             <div class="header2">
-                <a href="../index.html"><img class="logo" src="../img/logo-finishline.png" alt="FinishLine"></a>
-                <input class="header" type="search" placeholder="¿Qué estás buscando?">
+                <a href="../index.html"><img class="logo" src="../img/logo-finishline-transparente.png" alt="FinishLine"></a>
+                <input id="barraBusqueda" class="header" type="search" placeholder="¿Qué estás buscando?">
                 <div class="inicio-sesion">
-                    <img class="inicio-sesion" src="../img/usuario.png" alt="Inicio de sesion">
-                    <p class="inicio-sesion">INGRESA O REGISTRATE</p>
+                    <a href="./iniciosesion.html"><img class="inicio-sesion" src="../img/usuario.png" alt="Inicio de sesion"></a>
+                    <a href="./iniciosesion.html"><p class="inicio-sesion">INGRESA O REGISTRATE</p></a>
                 </div>
             </div>
             <nav class="nav">
