--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="shortcut icon" href="../img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/main.css">
     <title>Niños | FinishLine</title>
@@ -28,11 +29,11 @@
         </div>
         <div class="header">
             <div class="header2">
-                <a href="../index.html"><img class="logo" src="../img/logo-finishline.png" alt="FinishLine"></a>
-                <input class="header" type="search" placeholder="¿Qué estás buscando?">
+                <a href="../index.html"><img class="logo" src="../img/logo-finishline-transparente.png" alt="FinishLine"></a>
+                <input id="barraBusqueda" class="header" type="search" placeholder="¿Qué estás buscando?">
                 <div class="inicio-sesion">
-                    <img class="inicio-sesion" src="../img/usuario.png" alt="Inicio de sesion">
-                    <p class="inicio-sesion">INGRESA O REGISTRATE</p>
+                    <a href="./iniciosesion.html"><img class="inicio-sesion" src="../img/usuario.png" alt="Inicio de sesion"></a>
+                    <a href="./iniciosesion.html"><p class="inicio-sesion">INGRESA O REGISTRATE</p></a>
                 </div>
             </div>
             <nav class="nav">
@@ -44,11 +45,12 @@
                 </ul>
             </nav>
         </div>
-        <nav class="navbar bg-body-tertiary fixed-top navCarrito">
+        <nav class="navbar  fixed-top navCarrito">
             <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <img class="carrito" src="../img/carrito.png" alt="Carrito">
+                <span id="contadorCarrito"></span>
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -57,7 +59,9 @@
                 </div>
                 <div class="offcanvas-body carritoAgregado">
                 </div>
+                <div id="envio"></div>
                 <div id="totalCompra"></div>
+                <a class="a-FinalizarCompra" href="./finalizarcompra.html"><button id="finalizarCompra">Finalizar Compra</button></a>
           </nav>
     </header>
 
@@ -68,111 +72,25 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA LOS MÁS PEQUEÑOS</h2>
 
-        <section class="productos">
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-topper-blancas.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Topper X Forcer</h3>
-                    <h4 class="productos">$14.599</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-atomik.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Atomik Beta Pro</h3>
-                    <h4 class="productos">$8.299</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/campera-azul-dibujos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Nike Sportswear Icon Clash Windrunner Nena</h3>
-                    <h4 class="productos">$28.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-canelones-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Topper Br Puffer II</h3>
-                    <h4 class="productos">$28.979</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-adidas-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera adidas B Club 3 Tiras</h3>
-                    <h4 class="productos">$33.099</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/termica-blanca-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Gilbert Térmica Infantil</h3>
-                    <h4 class="productos">$8.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-fila-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Remera Fila Animal</h3>
-                    <h4 class="productos">$5.350</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/bermuda-topper-rosa.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Bermuda Topper Rtc</h3>
-                    <h4 class="productos">$7.199</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/malla-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Bikini Hydro Painting</h3>
-                    <h4 class="productos">$7.599</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-nike-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón Nike Sportswear Club Fleece</h3>
-                    <h4 class="productos">$12.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-adidas-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón adidas X Disney Pixar Monsters</h3>
-                    <h4 class="productos">$9.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/calza-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Calza adidas Designed To Move</h3>
-                    <h4 class="productos">$5.499</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/calza-floreada-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Calza adidas Marimekko Believe</h3>
-                    <h4 class="productos">$15.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-puma-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Puma Rebound Layup</h3>
-                    <h4 class="productos">$26.199</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-puma-azul-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas Puma Wired Run</h3>
-                    <h4 class="productos">$13.199</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/zapatillas-nike-celestes-ninos.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Zapatillas de Running Nike Star Runner 3 Mujer</h3>
-                    <h4 class="productos">$26.999</h4>
-                </div>
-            </div>
+        <section id="sectionGlobal">
+            <section id="filtros">
+                <h5 id="filtro-adidas">Adidas</h5>
+                <h5 id="filtro-atomik">Atomik</h5>
+                <h5 id="filtro-fila">Fila</h5>
+                <h5 id="filtro-gilbert">Gilbert</h5>
+                <h5 id="filtro-hydro">Hydro</h5>
+                <h5 id="filtro-nike">Nike</h5>
+                <h5 id="filtro-puma">Puma</h5>
+                <h5 id="filtro-topper">Topper</h5>
+                <h5 id="eliminar-filtros">Eliminar filtros</h5>
+            </section>
+            <section id="container"></section>
         </section>
+        <div id="cart"></div>
+
+        <section id="productos"></section>
+
+        <section id="carrito"></section>
     </main>
 
 
@@ -206,7 +124,10 @@
     </footer>
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+    <script src="../js/ninos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
