Creo clubes.js y modifico js

--- a/pages/finalizarcompra.html
+++ b/pages/finalizarcompra.html
@@ -148,11 +148,12 @@
           </div>
             <div id="compraFinalizada"></div>
         </section>
-
-        <p class="codigo-descuento">Código de descuento</p>
-        <input id="descuento"></input>
-        <div id="totalCompra"></div>
-        <button id="terminoCompra">Finalizar compra</button>
+        <Section class="finalizar-compra-bg">
+          <p class="codigo-descuento">CÓDIGO DE DESCUENTO</p>
+          <input id="descuento"></input>
+          <div id="totalCompra"></div>
+          <button id="terminoCompra">Finalizar compra</button>
+        </Section>
     </main>
 
     <footer class="footer">
