--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Raleway:wght@600&display=swap');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="shortcut icon" href="../img/logo-finishline-bg-white.png" type="image/x-icon">
     <link rel="stylesheet" href="../scss/main.css">
-    <title>Hombre | FinishLine</title>
+    <title>Clubes | FinishLine</title>
 </head>
 <body>
     <header class="header-index">
@@ -44,11 +45,12 @@
                 </ul>
             </nav>
         </div>
-        <nav class="navbar bg-body-tertiary fixed-top navCarrito">
+        <nav class="navbar  fixed-top navCarrito">
             <div class="container-fluid divCarrito">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler buttonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <img class="carrito" src="../img/carrito.png" alt="Carrito">
+                <span id="contadorCarrito"></span>
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -57,7 +59,9 @@
                 </div>
                 <div class="offcanvas-body carritoAgregado">
                 </div>
+                <div id="envio"></div>
                 <div id="totalCompra"></div>
+                <a class="a-FinalizarCompra" href="./finalizarcompra.html"><button id="finalizarCompra">Finalizar Compra</button></a>
           </nav>
     </header>
 
@@ -72,139 +76,21 @@
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
 
-        <section class="productos">
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camperon-independiente.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camperón Independiente Puma</h3>
-                    <h4 class="productos">$43.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-independiente.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Campera De Independiente Puma Entrenamiento Roja</h3>
-                    <h4 class="productos">$19.319</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-independiente.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De Independiente Puma Oficial Roja</h3>
-                    <h4 class="productos">$9.369</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-independiente.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón De Independiente Puma Pro Entrenamiento Negro</h3>
-                    <h4 class="productos">$10.649</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/conjunto-boca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Conjunto De Boca Adidas Azul</h3>
-                    <h4 class="productos">$44.440</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-boca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De Boca Adidas Tercer Recambio Authentic Azul</h3>
-                    <h4 class="productos">$15.399</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camperon-boca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camperón De Abrigo Boca Adidas Azul</h3>
-                    <h4 class="productos">$59.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-boca.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalón Adidas Boca Juniors Entrenamiento Mujer Azul</h3>
-                    <h4 class="productos">$17.749</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-river.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De River Adidas Oficial Campeón Blanca</h3>
-                    <h4 class="productos">$24.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pantalon-river.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pantalon De River Adidas Entrenamiento 22 Niño Verde</h3>
-                    <h4 class="productos">$24.440</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/ojotas-river.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Ojota De River Adidas Adilette Shower Blanca</h3>
-                    <h4 class="productos">$12.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-alternativa-river.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De River Adidas Alternativa Authentic Negra</h3>
-                    <h4 class="productos">$34.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-titular-sanlorenzo.webp" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta Fútbol Nike Titular San Lorenzo 2023 Hombre</h3>
-                    <h4 class="productos">$24.999</h4>
-                </div>
-
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-sanlorenzo.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De San Lorenzo Nike Alternativa Niño Blanca</h3>
-                    <h4 class="productos">$25.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/remera-negra-sanlorenzo.avif" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta Nike 3° Edicion</h3>
-                    <h4 class="productos">$24.999</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/campera-sanlorenzo.avif" alt="Camperon Independiente">
-                    <h3 class="productos">Campera Nike Park20 San Lorenzo</h3>
-                    <h4 class="productos">$19.999</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-racing.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De Racing Kappa Alternativa Azul</h3>
-                    <h4 class="productos">$9.699</h4>
-                </div>
-
-                <div class="productos">
-                    <img class="productos" src="../img/camiseta-blanca-racing.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Camiseta De Racing Kappa Tercer Recambio Slim Blanca</h3>
-                    <h4 class="productos">$9.699</h4>
-                </div>
-            </div>
-
-            <div class="productos-1">
-                <div class="productos">
-                    <img class="productos" src="../img/short-racing.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Short De Racing Kappa Unisex Blanco</h3>
-                    <h4 class="productos">$8.299</h4>
-                </div>
-                <div class="productos">
-                    <img class="productos" src="../img/pechera-racing.jpg" alt="Camperon Independiente">
-                    <h3 class="productos">Pechera De Racing Kappa Entrenamiento Amarilla</h3>
-                    <h4 class="productos">$7.099</h4>
-                </div>
-            </div>
+        <section id="sectionGlobal">
+            <section id="filtros">
+                <h5 id="filtro-adidas">Adidas</h5>
+                <h5 id="filtro-kappa">Kappa</h5>
+                <h5 id="filtro-nike">Nike</h5>
+                <h5 id="filtro-puma">Puma</h5>
+                <h5 id="eliminar-filtros">Eliminar filtros</h5>
+            </section>
+            <section id="container"></section>
         </section>
+        <div id="cart"></div>
+
+        <section id="productos"></section>
+
+        <section id="carrito"></section>
     </main>
 
     <footer class="footer">
@@ -248,6 +134,9 @@
 
 
 
+    <script src="../js/clubes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
