modifico js agregando function async + estilos en sass

--- a/pages/clubes.html
+++ b/pages/clubes.html
@@ -67,11 +67,11 @@
 
     <main>
         <div class="logo-clubes">
-            <img class="clubes" src="../img/logo-boca.png" alt="clubes">
-            <img class="clubes" src="../img/logo-river.png" alt="clubes">
-            <img class="clubes" src="../img/logo-independiente.png" alt="clubes">
-            <img class="clubes" src="../img/logo-racing.png" alt="clubes">
-            <img class="clubes" src="../img/logo-sanlorenzo.png" alt="clubes">
+            <img id="boca" class="clubes" src="../img/logo-boca.png" alt="clubes">
+            <img id="river" class="clubes" src="../img/logo-river.png" alt="clubes">
+            <img id="independiente" class="clubes" src="../img/logo-independiente.png" alt="clubes">
+            <img id="racing" class="clubes" src="../img/logo-racing.png" alt="clubes">
+            <img id="sanLorenzo" class="clubes" src="../img/logo-sanlorenzo.png" alt="clubes">
         </div>
 
         <h2 class="recomendados">RECOMENDADOS PARA VOS</h2>
